--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>Helle-Vibeke's Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url= https://github.com/hellevibeke/resume/raw/main/Helle-Vibeke%20Schu%CC%88tte%200423%20CV.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://docs.google.com/gview?url= https://github.com/hellevibeke/resume/raw/main/HVS%20resume.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
   </body>
 </html>
